Api.ts with register, backend with register, backend loading patients, add to cart not working
